--- a/A_dbms/templates/dbms/warrant/modl/warrant-edit-mod.html
+++ b/A_dbms/templates/dbms/warrant/modl/warrant-edit-mod.html
@@ -8,7 +8,7 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
                 <h4 class="modal-title" id="editWarrantModalLabel">
-                    {{ edit_warrant }}
+                    修改产权
                     <input style="display: none" name="warrant_id"
                            id="id_warrant_id" value={{ warrant_obj.id }}>
                     <input style="display: none" name="warrant_typ_n"
@@ -22,6 +22,8 @@
                         {% include 'dbms/warrant/modl/mod_form/house-add-edit.html' %}
                     {% elif warrant_typ_n == 2 %}
                         {% include 'dbms/warrant/modl/mod_form/ground-add-edit.html' %}
+                    {% elif warrant_typ_n == 9 %}
+                        {% include 'dbms/warrant/modl/mod_form/hypothec-add-edit.html' %}
                     {% endif %}
                 </form>
             </div>
