--- a/A_dbms/templates/dbms/article/article-scan.html
+++ b/A_dbms/templates/dbms/article/article-scan.html
@@ -1,6 +1,6 @@
 {% extends 'dbms/index_dbms.html' %}
 
-{% block title %}查看项目{% endblock %}
+{% block title %}{{ article_obj }}{% endblock %}
 
 {% block right-content-container %}
     <div class="container-fluid" style="padding-left: 1px;">
