--- a/A_dbms/templates/dbms/warrant/scan/warrant-summry-ground.html
+++ b/A_dbms/templates/dbms/warrant/scan/warrant-summry-ground.html
@@ -1,6 +1,6 @@
 <div class="panel-body row">
     <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-        权证编号：{{ warrant_obj.warrant_num }}
+        权证编码：{{ warrant_obj.warrant_num }}
     </label>
     <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
         坐落：{{ warrant_obj.ground_warrant.ground_locate }}
@@ -9,6 +9,9 @@
         用途：{{ warrant_obj.ground_warrant.get_ground_app_display }}
     </label>
     <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-        建筑面积：{{ warrant_obj.ground_warrant.ground_area }}
+        土地面积：{{ warrant_obj.ground_warrant.ground_area }}
+    </label>
+    <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+        库存状态：{{ warrant_obj.get_warrant_state_display }}
     </label>
 </div>
