--- a/A_dbms/templates/dbms/agree/agree-scan.html
+++ b/A_dbms/templates/dbms/agree/agree-scan.html
@@ -1,6 +1,6 @@
 {% extends 'dbms/index_dbms.html' %}
 
-{% block title %}合同预览{% endblock %}
+{% block title %}{{ agree_obj }}{% endblock %}
 
 {% block right-content-container %}
 
