--- a/A_dbms/templates/dbms/agree/scan/agree-tab.html
+++ b/A_dbms/templates/dbms/agree/scan/agree-tab.html
@@ -1,7 +1,13 @@
 <div>
     <!-- Nav tabs -->
-    {% include 'dbms/agree/scan/tab/agree-present.html' %}
-
+    <ul class="nav nav-tabs" role="tablist" style="background-color: #f5f5f5">
+        <li role="presentation" class="active">
+            <a href="#counters" style="background-color: #f5f5f5"
+               aria-controls="home" role="tab" data-toggle="tab"> 反担保合同 </a></li>
+    </ul>
     <!-- Tab panes -->
-    {% include 'dbms/agree/scan/tab/agree-content.html' %}
+    <div class="tab-content">
+        <div role="counters" class="tab-pane active" id="agree"> <!--反担保合同-->
+            {% include 'dbms/agree/scan/tab/agree-counters.html' %} </div>
+    </div>
 </div>
