--- a/A_dbms/templates/dbms/appraisal/appraisal-scan-lending.html
+++ b/A_dbms/templates/dbms/appraisal/appraisal-scan-lending.html
@@ -1,23 +1,18 @@
 {% extends 'dbms/index_dbms.html' %}
 
-{% block title %}参评项目{% endblock %}
+{% block title %}{{ lending_obj }}{% endblock %}
 
 {% block right-content-container %}
-
     <div class="container-fluid" style="padding-left: 1px;">
         {% include 'dbms/appraisal/scan/appraisal-summry.html' %}
         {% include 'dbms/appraisal/scan/appraisal-tab.html' %}
-        {% include 'dbms/appraisal/lending/detail-lending.html' %}
+        {% include 'dbms/appraisal/lending/appraisal-lending-tab.html' %}
         {% include 'dbms/appraisal/modl/guarantee-add-mod.html' %}
         {% include 'dbms/appraisal/modl/guarantee-del-mod.html' %}
-
-
     </div>
-
 {% endblock %}
 
 {% block extra-js %}
     {% include 'dbms/appraisal/extra/js-guarantee-add.html' %}
     {% include 'dbms/appraisal/extra/js-guarantee-del.html' %}
-
 {% endblock %}
