--- a/A_dbms/templates/dbms/appraisal/scan/appraisal-tab.html
+++ b/A_dbms/templates/dbms/appraisal/scan/appraisal-tab.html
@@ -1,7 +1,28 @@
 <div>
     <!-- Nav tabs -->
-    {% include 'dbms/appraisal/scan/tab/appraisal-present.html' %}
-
+    <ul class="nav nav-tabs" role="tablist" style="background-color: #f5f5f5">
+        <li role="presentation">
+            <a href="#comment" style="background-color: #f5f5f5"
+               aria-controls="profile" role="tab" data-toggle="tab"> 评委意见 </a></li>
+        <li role="presentation">
+            <a href="#single" style="background-color: #f5f5f5"
+               aria-controls="messages" role="tab" data-toggle="tab"> 单项额度 </a></li>
+        <li role="presentation" class="active">
+            <a href="#lending_order" style="background-color: #f5f5f5"
+               aria-controls="messages" role="tab" data-toggle="tab"> 放款次序 </a></li>
+        <li role="presentation">
+            <a href="#sign" style="background-color: #f5f5f5"
+               aria-controls="messages" role="tab" data-toggle="tab"> 签批详情 </a></li>
+    </ul>
     <!-- Tab panes -->
-    {% include 'dbms/appraisal/scan/tab/appraisal-content.html' %}
+    <div class="tab-content">
+        <div role="tabpanel" class="tab-pane" id="comment"><!--评审意见-->
+            {% include 'dbms/appraisal/scan/tab/comment.html' %} </div>
+        <div role="tabpanel" class="tab-pane" id="single"><!--单项额度-->
+            {% include 'dbms/appraisal/scan/tab/single.html' %}  </div>
+        <div role="tabpanel" class="tab-pane active" id="lending_order"><!--放款次序-->
+            {% include 'dbms/appraisal/scan/tab/lending_order.html' %} </div>
+        <div role="tabpanel" class="tab-pane" id="sign"><!--签批详情-->
+            {% include 'dbms/appraisal/scan/tab/sign.html' %} </div>
+    </div>
 </div>
