--- a/A_dbms/templates/dbms/article/scan/article-tab.html
+++ b/A_dbms/templates/dbms/article/scan/article-tab.html
@@ -1,7 +1,33 @@
 <div>
     <!-- Nav tabs -->
-    {% include 'dbms/article/scan/tab/article-present.html' %}
-
+    <ul class="nav nav-tabs" role="tablist" style="background-color: #f5f5f5">
+        <li role="presentation">
+            <a href="#feedback" style="background-color: #f5f5f5"
+               aria-controls="profile" role="tab" data-toggle="tab"> 反馈结论 </a></li>
+        <li role="presentation">
+            <a href="#meeting" style="background-color: #f5f5f5"
+               aria-controls="profile" role="tab" data-toggle="tab"> 评审会 </a></li>
+        <li role="presentation">
+            <a href="#comment" style="background-color: #f5f5f5"
+               aria-controls="messages" role="tab" data-toggle="tab"> 评委意见 </a></li>
+        <li role="presentation">
+            <a href="#single" style="background-color: #f5f5f5"
+               aria-controls="settings" role="tab" data-toggle="tab"> 单项额度 </a></li>
+        <li role="presentation" class="active">
+            <a href="#lenging" style="background-color: #f5f5f5"
+               aria-controls="settings" role="tab" data-toggle="tab"> 分笔发放 </a></li>
+    </ul>
     <!-- Tab panes -->
-    {% include 'dbms/article/scan/tab/article-content.html' %}
+    <div class="tab-content">
+        <div role="tabpanel" class="tab-pane" id="feedback"> <!--反馈结论-->
+            {% include 'dbms/article/scan/tab/feedback.html' %} </div>
+        <div role="tabpanel" class="tab-pane" id="meeting"> <!--评审会-->
+            {% include 'dbms/article/scan/tab/meeting.html' %} </div>
+        <div role="tabpanel" class="tab-pane" id="comment"> <!--评审意见-->
+            {% include 'dbms/article/scan/tab/comment.html' %} </div>
+        <div role="tabpanel" class="tab-pane" id="single"> <!--单项额度-->
+            {% include 'dbms/article/scan/tab/single.html' %} </div>
+        <div role="tabpanel" class="tab-pane active" id="lenging"> <!--分笔发放-->
+            {% include 'dbms/article/scan/tab/lending.html' %} </div>
+    </div>
 </div>
