--- a/A_dbms/templates/dbms/custom/custom-scan.html
+++ b/A_dbms/templates/dbms/custom/custom-scan.html
@@ -1,6 +1,6 @@
 {% extends 'dbms/index_dbms.html' %}
 
-{% block title %}查看项目{% endblock %}
+{% block title %}{{ custom_obj }}{% endblock %}
 
 {% block right-content-container %}
     <div class="container-fluid" style="padding-left: 1px;">
@@ -8,7 +8,6 @@
         {% include 'dbms/custom/scan/custom-tab.html' %}
         {% include 'dbms/custom/modl/custom-del-mod.html' %}
         {% include 'dbms/custom/modl/custom-edit-mod.html' %}
-
     </div>
 {% endblock %}
 
