--- a/A_dbms/templates/dbms/meeting/meeting-scan-article.html
+++ b/A_dbms/templates/dbms/meeting/meeting-scan-article.html
@@ -1,6 +1,6 @@
 {% extends 'dbms/index_dbms.html' %}
 
-{% block title %}参评项目{% endblock %}
+{% block title %}{{ meeting_obj }}_{{ article_obj }}{% endblock %}
 
 {% block right-content-container %}
 
