--- a/A_dbms/templates/dbms/meeting/meeting-scan.html
+++ b/A_dbms/templates/dbms/meeting/meeting-scan.html
@@ -1,6 +1,6 @@
 {% extends 'dbms/index_dbms.html' %}
 
-{% block title %}评审会{% endblock %}
+{% block title %}{{ meeting_obj }}{% endblock %}
 
 {% block right-content-container %}
 
