--- a/A_dbms/templates/dbms/warrant/scan/warrant-summry-hypothec.html
+++ b/A_dbms/templates/dbms/warrant/scan/warrant-summry-hypothec.html
@@ -1,6 +1,6 @@
 <div class="panel-body row">
     <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-        权证编号：{{ warrant_obj.warrant_num }}
+        权证编码：{{ warrant_obj.warrant_num }}
     </label>
     <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
         委托合同：{{ warrant_obj.ypothec_warrant.agree }}
