--- a/A_dbms/templates/dbms/warrant/scan/warrant_tab/mortgage.html
+++ b/A_dbms/templates/dbms/warrant/scan/warrant_tab/mortgage.html
@@ -8,27 +8,24 @@
         {#<caption><h4>项目管理</h4></caption>#}
         <thead>
         <tr style="text-align: center">
+            <th>合同编号</th>
+            <th>合同金额</th>
             <th>项目编号</th>
-            <th>金额（元）</th>
-            <th>期限</th>
-            <th>项目经理</th>
-            <th>项目助理</th>
-            <th>风控专员</th>
-            <th>提交日期</th>
-            <th>项目状态</th>
         </tr>
         </thead>
         <tbody>
-        <tr>
-            <td>{{ custom_obj.article_custom.all.0.article_num }}</td>
-            <td>{{ custom_obj.article_custom.all.0.amount }}</td>
-            <td>{{ custom_obj.article_custom.all.0.credit_term }}</td>
-            <td>{{ custom_obj.article_custom.all.0.director.name }}</td>
-            <td>{{ custom_obj.article_custom.all.0.assistant.name}}</td>
-            <td>{{ custom_obj.article_custom.all.0.control.name }}</td>
-            <td>{{ custom_obj.article_custom.all.0.article_date }}</td>
-            <td>{{ custom_obj.article_custom.all.0.get_article_state_display }}</td>
-        </tr>
+
+
+        {% for lendingwarrant in warrant_obj.lending_warrant.all %}
+            {% for agree in lendingwarrant.sure.lending.agree_lending.all %}
+                <tr>
+                    <td>{{ agree.agree_num }}</td>
+                    <td>{{ agree.agree_amount }}</td>
+                    <td>{{ agree.lending.summary }}</td>
+                </tr>
+            {% endfor %}
+        {% endfor %}
+
         </tbody>
     </table>
 </div>
