--- a/A_dbms/templates/dbms/warrant/warrant-scan.html
+++ b/A_dbms/templates/dbms/warrant/warrant-scan.html
@@ -1,6 +1,6 @@
 {% extends 'dbms/index_dbms.html' %}
 
-{% block title %}权证查看{% endblock %}
+{% block title %}{{ warrant_obj }}{% endblock %}
 
 {% block right-content-container %}
     <div class="container-fluid" style="padding-left: 1px;">
