--- a/A_dbms/templates/dbms/agree/modl/counter-add-mod.html
+++ b/A_dbms/templates/dbms/agree/modl/counter-add-mod.html
@@ -8,7 +8,8 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
                 <h4 class="modal-title" id="addCounterModalLabel">
-                    添加委托合同
+                    添加反担保合同
+                    <input name="agree_id" value="{{ agree_obj.id }}" style="display: none">
                 </h4>
             </div>
             <div class="modal-body">
