--- a/A_dbms/templates/dbms/appraisal/lending/appraisal-lending-tab.html
+++ b/A_dbms/templates/dbms/appraisal/lending/appraisal-lending-tab.html
@@ -1,7 +1,7 @@
 <div>
     <!-- Nav tabs -->
     <ul class="nav nav-tabs" role="tablist" style="background-color: #f5f5f5">
-        <li role="presentation active">
+        <li role="presentation" class="active">
             <a href="#counter-ensure" style="background-color: #f5f5f5"
                aria-controls="profile" role="tab" data-toggle="tab">保证</a></li>
         <li role="presentation">
