--- a/A_dbms/templates/dbms/provide/provide.html
+++ b/A_dbms/templates/dbms/provide/provide.html
@@ -1,37 +1,15 @@
-{% extends 'dbms/board/tabulation.html' %}
+{% extends 'dbms/index_dbms.html' %}
 
 {% block title %}放款管理{% endblock %}
 
-{% block table %}
-    <caption><h3>放款管理</h3></caption>
-    <thead>
-        <tr>
-            <th>序号</th>
-            <th>委托合同</th>
-            <th>纪要</th>
-            <th>客户</th>
-            <th>银行</th>
-            <th>合同类型</th>
-            <th>合同金额</th>
-            <th>风控落实</th>
-            <th>放款余额</th>
-            <th>编辑</th>
-        </tr>
-    </thead>
-    <tbody>
-    {% for provide in provide_list %}
-        <tr>
-            <td>{{provide.id}}</td>
-            <td><a href="{% url 'dbms:provide_edit' provide.id %}">{{provide.agree_num}}</a></td>
-            <td>{{provide.summary}}</td>
-            <td>{{provide.summary.article.custom}}</td>
-            <td>{{provide.branch}}</td>
-            <td>{{ provide.agree_typ }}</td>
-            <td>{{ provide.agree_money }}</td>
-            <td>{{ provide.implement }}</td>
-            <td>{{ provide.agree_balance }}</td>
-            </td>
-        </tr>
-    {% endfor %}
-    </tbody>
+
+{% block right-content-container %}
+    {% include 'dbms/provide/provide/provide-filter.html' %}
+    {% include 'dbms/provide/provide/agree-table.html' %}
+{% endblock %}
+
+{% block extra-js %}
+
+
+
 {% endblock %}
