--- a/A_dbms/templates/dbms/warrant/extra/js-warrant-add.html
+++ b/A_dbms/templates/dbms/warrant/extra/js-warrant-add.html
@@ -88,7 +88,8 @@
                     if (arg.status) {
                         $('#addWarrantModal').modal('hide');
                         alert(arg.message);
-                        window.location.reload();
+                        window.location.href = arg.skip;
+                        {#window.location.reload();#}
                     } else {
                         alert(arg.message);
                         console.log(arg.forme.house_locate);
