--- a/A_dbms/templates/dbms/agree/modl/mod_form/counter-assure-p.html
+++ b/A_dbms/templates/dbms/agree/modl/mod_form/counter-assure-p.html
@@ -1,14 +1,15 @@
 <div id="form_counter_assure_p" class="extend" style="display: none">
-    <div class="form-group"><!--企业保证人-->
-        <label for="id_custome_p" class="col-sm-3 control-label">
-            {{ form_counter_assure_p.custome_p.label }}：
-        </label>
+
+    <div class="form-group"><!--个人保证人-->
+        <label for="id_custome_p" class="col-sm-3 control-label">反担保个人：</label>
         <div class="col-sm-9">
-            {{ form_counter_assure_p.custome_p }}
-        </div>
-        <label id="e_custome_p" class="pull-right">
-            {{ form_counter_assure_p.custome_p.errors }}
-        </label>
+            <select name="custom_p" class="form-control" multiple="" id="id_custom_p" required="">
+                {% for custom_p in custom_p_lending_list %}
+                    <option value="{{ custom_p.0 }}">{{ custom_p.1 }}</option>
+                {% endfor %}
+            </select></div>
+        <label id="e_custome_p" class="pull-right"></label>
     </div>
+
 </div>
 
