--- a/A_dbms/templates/dbms/agree/modl/mod_form/counter-house.html
+++ b/A_dbms/templates/dbms/agree/modl/mod_form/counter-house.html
@@ -1,14 +1,17 @@
 <div id="form_counter_house" class="extend" style="display: none">
-    <div class="form-group"><!--企业保证人-->
-        <label for="id_house" class="col-sm-3 control-label">
-            {{ form_counter_house.house.label }}：
-        </label>
+
+    <div class="form-group"><!--反担保房产-->
+        <label for="id_house" class="col-sm-3 control-label">反担保房产：</label>
         <div class="col-sm-9">
-            {{ form_counter_house.house }}
-        </div>
-        <label id="e_house" class="pull-right">
-            {{ form_counter_house.house.errors }}
-        </label>
+            <select name="house" class="form-control" multiple="" id="id_house" required="">
+                {% for house in warrants_h_lending_list %}
+                    <option value="{{ house.0 }}">{{ house.1 }}</option>
+                {% endfor %}
+            </select></div>
+        <label id="e_house" class="pull-right"></label>
     </div>
+
 </div>
+
+
 
