--- a/A_dbms/templates/dbms/agree/scan/agree-summry.html
+++ b/A_dbms/templates/dbms/agree/scan/agree-summry.html
@@ -23,43 +23,6 @@
     </div>
 
     <div class="panel-body row" style="padding: 1px;">
-        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            合同编号：{{ agree_obj.agree_num }}
-        </label>
-        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            客户名称：{{ agree_obj.lending.summary.custom.name }}
-        </label>
-        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            放款银行：{{ agree_obj.branch.name }}
-        </label>
-        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            合同金额：{{ agree_obj.agree_amount }}
-        </label>
-        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            合同种类：{{ agree_obj.get_agree_typ_display }}
-        </label>
-        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            合同状态：{{ agree_obj.get_agree_state_display }}
-        </label>
-        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            纪要编号：{{ agree_obj.lending.summary.summary_num }}
-        </label>
-        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            放款次序：{{ agree_obj.lending.get_order_display }}
-        </label>
-        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            项目金额：{{ agree_obj.lending.summary.amount }}
-        </label>
-        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            担保期限(月)：{{ agree_obj.lending.summary.credit_term }}
-        </label>
-        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            项目经理：{{ agree_obj.lending.summary.director.name }}
-        </label>
-        </label>
-        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            签批日期：{{ agree_obj.lending.summary.sign_date }}
-        </label>
-
+        {% include 'dbms/agree/scan/agree-summry-body.html' %}
     </div>
 </div>
