--- a/A_dbms/templates/dbms/provide/provide.html
+++ b/A_dbms/templates/dbms/provide/provide.html
@@ -1,11 +1,11 @@
 {% extends 'dbms/index_dbms.html' %}
 
-{% block title %}放款管理{% endblock %}
+{% block title %}放款列表{% endblock %}
 
 
 {% block right-content-container %}
     {% include 'dbms/provide/provide/provide-filter.html' %}
-    {% include 'dbms/provide/provide/agree-table.html' %}
+    {% include 'dbms/provide/provide/provide-table.html' %}
 {% endblock %}
 
 {% block extra-js %}
