--- a/A_dbms/templates/dbms/custom/scan/custom-summry.html
+++ b/A_dbms/templates/dbms/custom/scan/custom-summry.html
@@ -3,11 +3,11 @@
         <label>客户情况</label>
         <label class="navbar-right">
             <a class="btn btn-primary btn-sm " id="editCustom">
-                修改
-            </a><!--#path('custom/edit/'-->
+                修改 </a><!--#path('custom/edit/'-->
             <a class="btn btn-danger btn-sm " id="delCustom">
-                删除
-            </a><!--#path('custom/del/'-->
+                删除</a><!--#path('custom/del/'-->
+            <a class="btn btn-danger btn-sm " id="delCustom">
+                保后</a><!--#path('custom/del/'-->
         </label>
     </div>
 
