--- a/A_dbms/templates/dbms/custom/scan/custom-tab.html
+++ b/A_dbms/templates/dbms/custom/scan/custom-tab.html
@@ -1,7 +1,30 @@
 <div>
     <!-- Nav tabs -->
-    {% include 'dbms/custom/scan/tab/custom-present.html' %}
-
+    <ul class="nav nav-tabs" role="tablist" style="background-color: #f5f5f5">
+        <li role="presentation">
+            <a href="#contact_way" style="background-color: #f5f5f5"
+               aria-controls="profile" role="tab" data-toggle="tab">联系方式</a></li>
+        {% if custom_obj.genre == 1 %}
+            <li role="presentation">
+                <a href="#business_information" style="background-color: #f5f5f5"
+                   aria-controls="profile" role="tab" data-toggle="tab">工商信息</a></li>
+        {% endif %}
+        <li role="presentation" class="active">
+            <a href="#project_status" style="background-color: #f5f5f5"
+               aria-controls="settings" role="tab" data-toggle="tab">项目情况</a></li>
+        <li role="presentation">
+            <a href="#review_check" style="background-color: #f5f5f5"
+               aria-controls="settings" role="tab" data-toggle="tab">保后</a></li>
+    </ul>
     <!-- Tab panes -->
-    {% include 'dbms/custom/scan/tab/custom-content.html' %}
+    <div class="tab-content">
+        <div role="tabpanel" class="tab-pane" id="contact_way"> <!--联系方式-->
+            {% include 'dbms/custom/scan/tab/contact_way.html' %}</div>
+        {% if custom_obj.genre == 1 %}
+            <div role="tabpanel" class="tab-pane" id="business_information"> <!--工商信息-->
+                {% include 'dbms/custom/scan/tab/business_information.html' %}</div>
+        {% endif %}
+        <div role="tabpanel" class="tab-pane active" id="project_status"> <!--项目情况-->
+            {% include 'dbms/custom/scan/tab/project_status.html' %}</div>
+    </div>
 </div>
