--- a/A_dbms/templates/dbms/meeting/scan/meeting-tabs.html
+++ b/A_dbms/templates/dbms/meeting/scan/meeting-tabs.html
@@ -1,7 +1,18 @@
 <div>
     <!-- Nav tabs -->
-    {% include 'dbms/meeting/scan/tab/present.html' %}
-
+    <ul class="nav nav-tabs" role="tablist" style="background-color: #f5f5f5">
+        <li role="presentation" class="active">
+            <a href="#articles" style="background-color: #f5f5f5"
+               aria-controls="messages" role="tab" data-toggle="tab">参评项目</a></li>
+        <li role="presentation">
+            <a href="#expert" style="background-color: #f5f5f5"
+               aria-controls="messages" role="tab" data-toggle="tab">参会评委</a></li>
+    </ul>
     <!-- Tab panes -->
-    {% include 'dbms/meeting/scan/tab/content.html' %}
+    <div class="tab-content">
+        <div role="tabpanel" class="tab-pane active" id="articles"> <!--参评项目-->
+            {% include 'dbms/meeting/scan/tab/articles.html' %}</div>
+        <div role="tabpanel" class="tab-pane" id="expert"> <!--评审委员-->
+            {% include 'dbms/meeting/scan/tab/experts.html' %}</div>
+    </div>
 </div>
