--- a/A_dbms/templates/dbms/provide/agreep-scan.html
+++ b/A_dbms/templates/dbms/provide/agreep-scan.html
@@ -5,8 +5,8 @@
 {% block right-content-container %}
 
     <div class="container-fluid" style="padding-left: 1px;">
-{#        {% include 'dbms/provide/scan/provide-summry.html' %}#}
-        {#        {% include 'dbms/provide/scan/provide-tab.html' %}#}
+        {% include 'dbms/provide/agreep_scan/agreep-summry.html' %}
+        {% include 'dbms/provide/agreep_scan/agreep-tab.html' %}
     </div>
 {% endblock %}
 
