--- a/A_dbms/templates/dbms/agree/extra/js-counter-add.html
+++ b/A_dbms/templates/dbms/agree/extra/js-counter-add.html
@@ -30,8 +30,20 @@
                 case ('11'):
                     $('#form_counter_house').show();
                     break;
+                case ('21'):
+                    $('#form_counter_house').show();
+                    break;
                 case ('12'):
                     $('#form_counter_ground').show();
+                    break;
+                case ('22'):
+                    $('#form_counter_ground').show();
+                    break;
+                case ('31'):
+                    $('#form_counter_receivable').show();
+                    break;
+                case ('32'):
+                    $('#form_counter_stock').show();
                     break;
                 default:
                     $('.extend').hide()
