--- a/A_dbms/templates/dbms/appraisal/extra/js-guarantee-add.html
+++ b/A_dbms/templates/dbms/appraisal/extra/js-guarantee-add.html
@@ -50,6 +50,12 @@
                 case ('53'):
                     $('#form_lendingground_add').show();
                     break;
+                case ('31'):
+                    $('#form_lendinggreceivable_add').show();
+                    break;
+                case ('32'):
+                    $('#form_lendingstock_add').show();
+                    break;
                 default:
                     $('.guarantee-extend').hide()
             }
