--- a/A_dbms/templates/dbms/appraisal/modl/guarantee-add-mod.html
+++ b/A_dbms/templates/dbms/appraisal/modl/guarantee-add-mod.html
@@ -21,6 +21,8 @@
                     {% include 'dbms/appraisal/modl/mod_form/guarantee-customs_p.html' %}
                     {% include 'dbms/appraisal/modl/mod_form/guarantee-house-add.html' %}
                     {% include 'dbms/appraisal/modl/mod_form/guarantee-ground-add.html' %}
+                    {% include 'dbms/appraisal/modl/mod_form/guarantee-receivable-add.html' %}
+                    {% include 'dbms/appraisal/modl/mod_form/guarantee-stock-add.html' %}
                 </form>
 
             </div>
