--- a/A_dbms/templates/dbms/agree/modl/counter-add-mod.html
+++ b/A_dbms/templates/dbms/agree/modl/counter-add-mod.html
@@ -20,6 +20,8 @@
                     {% include 'dbms/agree/modl/mod_form/counter-assure-p.html' %}
                     {% include 'dbms/agree/modl/mod_form/counter-house.html' %}
                     {% include 'dbms/agree/modl/mod_form/counter-ground.html' %}
+                    {% include 'dbms/agree/modl/mod_form/counter-receivable.html' %}
+                    {% include 'dbms/agree/modl/mod_form/counter-stock.html' %}
                 </form>
 
             </div>
