--- a/A_dbms/templates/dbms/custom/modl/mod_form/custom-edit.html
+++ b/A_dbms/templates/dbms/custom/modl/mod_form/custom-edit.html
@@ -1,51 +1,33 @@
 <div id="form_custom_edit">
 
     <div class="form-group"><!--客户名称-->
-        <label for="id_name" class="col-sm-3 control-label">
-            {{ form_custom_edit.name.label }}：
-        </label>
-        <div class="col-sm-9">
-            {{ form_custom_edit.name }}
-        </div>
-        <label id="e_name" class="pull-right">
-            {{ form_custom_edit.name.errors }}
-        </label>
+        <label for="id_name" class="col-sm-3 control-label">{{ form_custom_edit.name.label }}：</label>
+        <div class="col-sm-9">{{ form_custom_edit.name }}</div>
+        <label id="e_name" class="pull-right">{{ form_custom_edit.name.errors }}</label>
+    </div>
+
+    <div class="form-group"><!--是否仅为反担保人-->
+        <label for="id_counter_only" class="col-sm-3 control-label">{{ form_custom_edit.counter_only.label }}：</label>
+        <div class="col-sm-9">{{ form_custom_edit.counter_only }}</div>
+        <label id="e_counter_only" class="pull-right">{{ form_custom_edit.counter_only.errors }}</label>
     </div>
 
     <div class="form-group"><!--联系地址-->
-        <label for="id_contact_addrp" class="col-sm-3 control-label">
-            {{ form_custom_edit.contact_addr.label }}：
-        </label>
-        <div class="col-sm-9">
-            {{ form_custom_edit.contact_addr }}
-        </div>
-        <label id="form_custom_edit" class="pull-right">
-            {{ form_custom_edit.contact_addr.errors }}
-        </label>
+        <label for="id_contact_addrp" class="col-sm-3 control-label">{{ form_custom_edit.contact_addr.label }}：</label>
+        <div class="col-sm-9">{{ form_custom_edit.contact_addr }}</div>
+        <label id="form_custom_edit" class="pull-right">{{ form_custom_edit.contact_addr.errors }}</label>
     </div>
 
     <div class="form-group"><!--联系人-->
-        <label for="id_linkman" class="col-sm-3 control-label">
-            {{ form_custom_edit.linkman.label }}：
-        </label>
-        <div class="col-sm-9">
-            {{ form_custom_edit.linkman }}
-        </div>
-        <label id="e_linkman" class="pull-right">
-            {{ form_custom_edit.linkman.errors }}
-        </label>
+        <label for="id_linkman" class="col-sm-3 control-label">{{ form_custom_edit.linkman.label }}：</label>
+        <div class="col-sm-9">  {{ form_custom_edit.linkman }}</div>
+        <label id="e_linkman" class="pull-right">{{ form_custom_edit.linkman.errors }} </label>
     </div>
 
     <div class="form-group"><!--联系电话-->
-        <label for="id_contact_num" class="col-sm-3 control-label">
-            {{ form_custom_edit.contact_num.label }}：
-        </label>
-        <div class="col-sm-9">
-            {{ form_custom_edit.contact_num }}
-        </div>
-        <label id="e_contact_num" class="pull-right">
-            {{ form_custom_edit.contact_num.errors }}
-        </label>
+        <label for="id_contact_num" class="col-sm-3 control-label"> {{ form_custom_edit.contact_num.label }}： </label>
+        <div class="col-sm-9"> {{ form_custom_edit.contact_num }}</div>
+        <label id="e_contact_num" class="pull-right">{{ form_custom_edit.contact_num.errors }}</label>
     </div>
 
 </div>
